AB-831 - Prevent popover close on scrollbar click

--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -37,7 +37,7 @@
   }
 
   &__wrap {
-    position: fixed;
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
